delet file migration untuk perbaikan, perbaikan featur
